# tc-solana-bridge

./: .gitignore  Cargo.toml  README.md
services-go/: go.mod  go.sum  main.go
services-go/deposit/: deposit.go
services-go/owners/: owners.go
services-go/withdraw/: util.go  withdraw.go
src/: error.rs  instruction.rs  processor.rs  state.rs
